--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   chatgpt-next-web: 
-    profiles: ["no-proxy"]
+    # profiles: ["no-proxy"]
     container_name: chatgpt-next-web
     image: 172232502/chatgpt-next-web
     ports:
