--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,10 +3,10 @@ name: Upstream Sync
 permissions:
   contents: write
 
-on:
-  schedule:
-    - cron: "0 0 * * *" # every day
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: "0 0 * * *" # every day
+#   workflow_dispatch:
 
 jobs:
   sync_latest_from_upstream:
